# semantic-scholar-easy-api

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
api/: auth.py  background.py  constants.py  main.py  schema.py
api/recommendations/: router.py  schema.py
tf-module/: README.md  main.tf  outputs.tf  variables.tf
