[project]
name = "semantic-scholar-easy-api"
version = "0.0.0-dev"
description = "Setup you semantic scholar API to work effortlessly with ChatGPT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.4",
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]
